force-app/main/default/objects/Products_c__x/Products_c__x.object-meta.xml
<CustomObject>
    <externalDataSource>MCC_Products</externalDataSource>
    <externalName>Products__c</externalName>
    <label>Product</label>
    <pluralLabel>Products</pluralLabel>
</CustomObject>