force-app/main/default/objects/Products_c__x/fields/Available_Quantity_c__c.field-meta.xml
<CustomField>
    <fullName>Available_Quantity_c__c</fullName>
    <externalDeveloperName>Available_Quantity__c</externalDeveloperName>
    <label>Available Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>