force-app/main/default/objects/Products_c__x/fields/Client_Rate_c__c.field-meta.xml
<CustomField>
    <fullName>Client_Rate_c__c</fullName>
    <externalDeveloperName>Client_Rate__c</externalDeveloperName>
    <label>Client Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>