force-app/main/default/objects/Products_c__x/fields/CreatedById__c.field-meta.xml
<CustomField>
    <fullName>CreatedById__c</fullName>
    <externalDeveloperName>CreatedById</externalDeveloperName>
    <label>Created By ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>