force-app/main/default/objects/Products_c__x/fields/CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>CreatedDate__c</fullName>
    <externalDeveloperName>CreatedDate</externalDeveloperName>
    <label>Created Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>