force-app/main/default/objects/Products_c__x/fields/In_House_c__c.field-meta.xml
<CustomField>
    <fullName>In_House_c__c</fullName>
    <externalDeveloperName>In_House__c</externalDeveloperName>
    <label>In House</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>