force-app/main/default/objects/Products_c__x/fields/MCC_Rate_c__c.field-meta.xml
<CustomField>
    <fullName>MCC_Rate_c__c</fullName>
    <externalDeveloperName>MCC_Rate__c</externalDeveloperName>
    <label>MCC Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>