force-app/main/default/objects/Products_c__x/fields/Measurement_c__c.field-meta.xml
<CustomField>
    <fullName>Measurement_c__c</fullName>
    <externalDeveloperName>Measurement__c</externalDeveloperName>
    <label>Size</label>
    <length>255</length>
    <type>Text</type>
</CustomField>