force-app/main/default/objects/Products_c__x/fields/Number_Of_Days_c__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Days_c__c</fullName>
    <externalDeveloperName>Number_Of_Days__c</externalDeveloperName>
    <label>Number Of Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>