force-app/main/default/objects/Products_c__x/fields/Out_House_c__c.field-meta.xml
<CustomField>
    <fullName>Out_House_c__c</fullName>
    <externalDeveloperName>Out_House__c</externalDeveloperName>
    <label>Out Source</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>