force-app/main/default/objects/Products_c__x/fields/Price_Current_c__c.field-meta.xml
<CustomField>
    <fullName>Price_Current_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Price_Current__c</externalDeveloperName>
    <label>Price Current</label>
    <type>Checkbox</type>
</CustomField>