force-app/main/default/objects/Products_c__x/fields/Price_List_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Price_List_Date_c__c</fullName>
    <externalDeveloperName>Price_List_Date__c</externalDeveloperName>
    <label>Price List Date</label>
    <type>Date</type>
</CustomField>