force-app/main/default/objects/Products_c__x/fields/Product_Category_c__c.field-meta.xml
<CustomField>
    <fullName>Product_Category_c__c</fullName>
    <externalDeveloperName>Product_Category__c</externalDeveloperName>
    <label>Product Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>