force-app/main/default/objects/Products_c__x/fields/Product_Code_c__c.field-meta.xml
<CustomField>
    <fullName>Product_Code_c__c</fullName>
    <externalDeveloperName>Product_Code__c</externalDeveloperName>
    <label>Product Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>