force-app/main/default/objects/Products_c__x/fields/Product_Description_c__c.field-meta.xml
<CustomField>
    <fullName>Product_Description_c__c</fullName>
    <externalDeveloperName>Product_Description__c</externalDeveloperName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>