force-app/main/default/objects/Products_c__x/fields/Product_Name_c__c.field-meta.xml
<CustomField>
    <fullName>Product_Name_c__c</fullName>
    <externalDeveloperName>Product_Name__c</externalDeveloperName>
    <label>Product Name</label>
    <length>1300</length>
    <type>LongTextArea</type>
</CustomField>