force-app/main/default/objects/Products_c__x/fields/Product_Price_c__c.field-meta.xml
<CustomField>
    <fullName>Product_Price_c__c</fullName>
    <externalDeveloperName>Product_Price__c</externalDeveloperName>
    <label>Product Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>