force-app/main/default/objects/Products_c__x/fields/Quantity_Available_c__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Available_c__c</fullName>
    <externalDeveloperName>Quantity_Available__c</externalDeveloperName>
    <label>Quantity Available</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>