force-app/main/default/objects/Products_c__x/fields/Quantity_c__c.field-meta.xml
<CustomField>
    <fullName>Quantity_c__c</fullName>
    <externalDeveloperName>Quantity__c</externalDeveloperName>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>