force-app/main/default/objects/Products_c__x/fields/Seating_c__c.field-meta.xml
<CustomField>
    <fullName>Seating_c__c</fullName>
    <externalDeveloperName>Seating__c</externalDeveloperName>
    <label>Seating</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>