force-app/main/default/objects/Products_c__x/fields/Size_c__c.field-meta.xml
<CustomField>
    <fullName>Size_c__c</fullName>
    <externalDeveloperName>Size__c</externalDeveloperName>
    <label>Unit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>