force-app/main/default/objects/Products_c__x/fields/SystemModstamp__c.field-meta.xml
<CustomField>
    <fullName>SystemModstamp__c</fullName>
    <externalDeveloperName>SystemModstamp</externalDeveloperName>
    <label>System Modstamp</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>