force-app/main/default/objects/Products_c__x/fields/Total_Cost_c__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost_c__c</fullName>
    <externalDeveloperName>Total_Cost__c</externalDeveloperName>
    <label>Total Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>