force-app/main/default/objects/Products_c__x/fields/Unit_Price_c__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price_c__c</fullName>
    <externalDeveloperName>Unit_Price__c</externalDeveloperName>
    <label>Unit Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>