force-app/main/default/objects/Products_c__x/fields/UOM_c__c.field-meta.xml
<CustomField>
    <fullName>UOM_c__c</fullName>
    <externalDeveloperName>UOM__c</externalDeveloperName>
    <label>UOM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>