force-app/main/default/objects/Products_c__x/fields/Vendor_c__c.field-meta.xml
<CustomField>
    <fullName>Vendor_c__c</fullName>
    <externalDeveloperName>Vendor__c</externalDeveloperName>
    <label>Vendor</label>
    <length>18</length>
    <type>Text</type>
</CustomField>