force-app/main/default/objects/Products_c__x/fields/Vendor_Rate_c__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Rate_c__c</fullName>
    <externalDeveloperName>Vendor_Rate__c</externalDeveloperName>
    <label>Vendor Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>