force-app/main/default/objects/Products_c__x/fields/Warehouse_Inventory_c__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Inventory_c__c</fullName>
    <externalDeveloperName>Warehouse_Inventory__c</externalDeveloperName>
    <label>Warehouse Inventory</label>
    <length>18</length>
    <type>Text</type>
</CustomField>