force-app/main/default/objects/Products_c__x/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Name__c</columns>
    <columns>MCC_Rate_c__c</columns>
    <columns>Available_Quantity_c__c</columns>
    <columns>Out_House_c__c</columns>
    <columns>Price_Current_c__c</columns>
    <columns>Price_List_Date_c__c</columns>
    <columns>Product_Category_c__c</columns>
    <columns>Product_Code_c__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>